# advent_24

./: CMakeLists.txt  LICENSE  README.md
day_1/: CMakeLists.txt  main.cpp
day_2/: CMakeLists.txt  main.cpp
day_3/: CMakeLists.txt  main.cpp
day_4/: CMakeLists.txt  imp.h  main.cpp
day_5/: CMakeLists.txt  main.cpp
day_6/: CMakeLists.txt  main.cpp
