cmake_minimum_required(VERSION 3.29)
project(advent_24)

set(CMAKE_CXX_STANDARD 20)
add_compile_definitions(ADVENT_24_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(SUBDIR ${SUBDIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR} AND SUBDIR MATCHES "^day")
        add_subdirectory(${SUBDIR})
    endif()
endforeach()